WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117744
REGRESSION (
r151451
): Text not vertically centered correctly on icloud.com
https://bugs.webkit.org/show_bug.cgi?id=117744
Summary
REGRESSION (r151451): Text not vertically centered correctly on icloud.com
Beth Dakin
Reported
2013-06-18 11:27:05 PDT
* SUMMARY
http://icloud.com
no longer has the username/password text centered after
http://trac.webkit.org/changeset/151451
* STEPS TO REPRODUCE 1. Go to
http://icloud.com
2. Enter in a username * RESULTS Text is not centered vertically. It should be. <
rdar://problem/14189756
>
Attachments
Screenshot
(184.15 KB, image/png)
2013-06-18 11:52 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(8.00 KB, patch)
2013-06-18 13:25 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion
(562.38 KB, application/zip)
2013-06-18 16:30 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from APPLE-EWS-3 for win-future
(827.57 KB, application/zip)
2013-06-18 17:30 PDT
,
Build Bot
no flags
Details
Patch
(60.66 KB, patch)
2013-06-19 12:15 PDT
,
Robert Hogan
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from APPLE-EWS-6 for win-future
(790.87 KB, application/zip)
2013-06-19 16:08 PDT
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-06-18 11:52:15 PDT
Created
attachment 204927
[details]
Screenshot
Robert Hogan
Comment 2
2013-06-18 13:25:50 PDT
Created
attachment 204935
[details]
Patch
Robert Hogan
Comment 3
2013-06-18 13:26:51 PDT
***
Bug 117745
has been marked as a duplicate of this bug. ***
Build Bot
Comment 4
2013-06-18 16:30:54 PDT
Comment on
attachment 204935
[details]
Patch
Attachment 204935
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/943049
New failing tests: fast/forms/input-appearance-preventDefault.html fast/forms/onselect-textfield.html fast/replaced/width-and-height-of-positioned-replaced-elements.html
Build Bot
Comment 5
2013-06-18 16:30:56 PDT
Created
attachment 204951
[details]
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Build Bot
Comment 6
2013-06-18 17:30:51 PDT
Comment on
attachment 204935
[details]
Patch
Attachment 204935
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/869260
New failing tests: fast/forms/input-appearance-preventDefault.html fast/replaced/width-and-height-of-positioned-replaced-elements.html
Build Bot
Comment 7
2013-06-18 17:30:53 PDT
Created
attachment 204957
[details]
Archive of layout-test-results from APPLE-EWS-3 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-3 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Dave Hyatt
Comment 8
2013-06-19 11:42:19 PDT
Comment on
attachment 204935
[details]
Patch r=me
Robert Hogan
Comment 9
2013-06-19 12:15:56 PDT
Created
attachment 205026
[details]
Patch Patch For Landing
Build Bot
Comment 10
2013-06-19 16:08:49 PDT
Comment on
attachment 205026
[details]
Patch
Attachment 205026
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/934302
New failing tests: fast/media/mq-transform-03.html fast/media/mq-transform-02.html platform/win/accessibility/multiple-select-element-role.html
Build Bot
Comment 11
2013-06-19 16:08:51 PDT
Created
attachment 205038
[details]
Archive of layout-test-results from APPLE-EWS-6 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-6 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
WebKit Commit Bot
Comment 12
2013-06-20 10:55:09 PDT
Comment on
attachment 205026
[details]
Patch Rejecting
attachment 205026
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 205026, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: atching file LayoutTests/fast/replaced/width-and-height-of-positioned-replaced-elements-expected.txt patching file LayoutTests/platform/mac/fast/forms/input-appearance-preventDefault-expected.txt LayoutTests/platform/mac/fast/replaced/width-and-height-of-positioned-replaced-elements-expected.png already exists at /Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply line 258. Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 25 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/934499
WebKit Commit Bot
Comment 13
2013-06-20 11:53:15 PDT
Comment on
attachment 205026
[details]
Patch Rejecting
attachment 205026
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 205026, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: atching file LayoutTests/fast/replaced/width-and-height-of-positioned-replaced-elements-expected.txt patching file LayoutTests/platform/mac/fast/forms/input-appearance-preventDefault-expected.txt LayoutTests/platform/mac/fast/replaced/width-and-height-of-positioned-replaced-elements-expected.png already exists at /Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply line 258. Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 25 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/871239
Robert Hogan
Comment 14
2013-06-20 11:59:32 PDT
Committed
r151788
: <
http://trac.webkit.org/changeset/151788
>
WebKit Commit Bot
Comment 15
2013-06-20 13:35:01 PDT
Re-opened since this is blocked by
bug 117847
Robert Hogan
Comment 16
2013-06-20 13:38:02 PDT
This was the wrong fix I think. I'm going to do the proper one at
bug 117845
. The fix is kind of speculative since I can't recreate the issue reported on Qt. However the issue I intend to remedy at 117845 is a very likely culprit.
Robert Hogan
Comment 17
2013-06-20 13:52:41 PDT
r151451
was rolled out:
http://trac.webkit.org/changeset/151799
Robert Hogan
Comment 18
2013-08-30 01:39:48 PDT
(In reply to
comment #17
)
>
r151451
was rolled out:
http://trac.webkit.org/changeset/151799
This change was rolled in again with
r154826
and should have fixed the issue encountered in this bug. While I was able to recreate the centering issues on other reported sites on my non-Mac build, I was never able to recreate the one on iCloud.com - so Beth could you confirm that it is not an issue anymore?
Tim Horton
Comment 19
2013-08-30 02:08:28 PDT
(In reply to
comment #18
)
> (In reply to
comment #17
) > >
r151451
was rolled out:
http://trac.webkit.org/changeset/151799
> > This change was rolled in again with
r154826
and should have fixed the issue encountered in this bug. While I was able to recreate the centering issues on other reported sites on my non-Mac build, I was never able to recreate the one on iCloud.com - so Beth could you confirm that it is not an issue anymore?
It is still an issue - that is, on ToT, the iCloud.com login page text field text is too high, as in smfr's screenshot.
Alexey Proskuryakov
Comment 20
2013-08-30 11:26:31 PDT
Looks like it got rolled out again?
Robert Hogan
Comment 21
2013-08-30 11:41:53 PDT
Yup..
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug