REGRESSION (r151451): Text not vertically centered correctly on icloud.com https://bugs.webkit.org/show_bug.cgi?id=117744

Reviewed by David Hyatt.

Source/WebCore:

The positioned height and width computation adds in the element's border and padding so
don't add it to the intrinsic height and preferred widths of text controls that are
absolutely positioned.

Test: fast/replaced/height-of-positioned-text-control.html

* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::computeLogicalHeight):
(WebCore::RenderTextControl::computePreferredLogicalWidths):

LayoutTests:

* fast/forms/onselect-textfield-expected.txt:
* fast/replaced/height-of-positioned-text-control-expected.html: Added.
* fast/replaced/height-of-positioned-text-control.html: Added.
* fast/replaced/width-and-height-of-positioned-replaced-elements-expected.txt:
* platform/mac/fast/forms/input-appearance-preventDefault-expected.png:
* platform/mac/fast/forms/input-appearance-preventDefault-expected.txt:
* platform/mac/fast/replaced/width-and-height-of-positioned-replaced-elements-expected.png: Added.
* platform/mac/fast/replaced/width-and-height-of-positioned-replaced-elements-expected.txt:
* platform/qt/fast/forms/input-appearance-preventDefault-expected.txt:

Canonical link: https://commits.webkit.org/135973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151788 268f45cc-cd09-0410-ab3c-d52691b4dbfc